force-app/main/default/objects/KimbleOne__InterfaceRun__c/KimbleOne__InterfaceRun__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Interface Run</label>
    <nameField>
        <label>Interface Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>