force-app/main/default/objects/KimbleOne__InterfaceRun__c/fields/KimbleOne__HasErrors__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>