force-app/main/default/objects/KimbleOne__InterfaceRun__c/fields/KimbleOne__InterfaceMap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceMap__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interface Map</label>
    <referenceTo>KimbleOne__InterfaceMap__c</referenceTo>
    <relationshipLabel>Interface Runs</relationshipLabel>
    <relationshipName>InterfaceRuns</relationshipName>
    <type>Lookup</type>
</CustomField>