force-app/main/default/objects/KimbleOne__InterfaceRun__c/fields/KimbleOne__MapContext__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MapContext__c</fullName>
    <label>Map Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>