force-app/main/default/objects/KimbleOne__InterfaceRun__c/fields/KimbleOne__NumberOfRecords__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfRecords__c</fullName>
    <label>Number Of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>