force-app/main/default/objects/KimbleOne__InterfaceRun__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__InterfaceType__c</columns>
    <columns>KimbleOne__MapContext__c</columns>
    <columns>KimbleOne__NumberOfRecords__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__HasErrors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>