force-app/main/default/objects/KimbleOne__InterfaceRun__c/listViews/KimbleOne__Payment_Card_Statements.listView-meta.xml
<ListView>
    <fullName>KimbleOne__Payment_Card_Statements</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__NumberOfRecords__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__InterfaceType__c</field>
        <operation>equals</operation>
        <value>Payment Card Statement</value>
    </filters>
    <label>Payment Card Statements</label>
    <language>en_US</language>
</ListView>